@@ -1,3 +1,9 @@
+commit 4e533ec6d449bb27215ca2663490495c48722846
+Date:   Tue Apr 28 11:57:26 2015 +0300
+
+    Checked in the Python code with an example.
+    We'll do an example test Script or Expert Real Soon Now(TM).
+
 commit eda23d6a8bfc7e6260ac1f186ff1819ee02f0b47
 Date:   Tue Apr 28 10:50:40 2015 +0300
 
